# abstracting-fastapi-services

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
app/: main.py
app/config/: database.py
app/models/: foo.py
app/routers/: foo.py
app/schemas/: foo.py
app/services/: foo.py  main.py
app/utils/: app_exceptions.py  get_list_of_app_exceptions_for_frontend.py  request_exceptions.py  service_result.py
tests/: test_app.py
