[tool.poetry]
name = "fastapi-service"
version = "0.1.0"
description = ""
authors = ["Camillo Visini <c.visini@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.62.0"
loguru = "^0.5.3"
SQLAlchemy = "^1.3.20"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
